--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="app"></div>
     <!-- webpack -->
-    <script src="bundle.js"></script>
+    <script src="./bundle.js"></script>
 </body>
 
 </html>
