--- a/public/splashPage.html
+++ b/public/splashPage.html
@@ -36,7 +36,7 @@
 </nav>
 
 <div class="jumbotron text-center">
-  <h1>Fido and Tiger Pet Sitting</h1> 
+  <h1 >Fido and Tiger Pet Sitting</h1> 
   <p>Personal Pet Care, with a Professional Touch</p> 
   <form>
     <div class="input-group">
@@ -217,7 +217,7 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>Website built by Team RATE</p>
+  <p>Website built by Team TATE</p>
 </footer>
 
 <script>
